--- a/GamingPlatform/wwwroot/css/PetitBac/ConfigurationStyle.css
+++ b/GamingPlatform/wwwroot/css/PetitBac/ConfigurationStyle.css
@@ -9,16 +9,23 @@
     gap: 15px; /* Espacement entre les colonnes */
 }
 
-/* personalisation de l'affichage des messages*/
 .text-danger {
-    color: red;
+    color: #ff0000;
     font-size: 14px;
     font-weight: bold;
+    margin-top: 5px;
+    display: block;
 }
 
 .d-none {
-    display: none;
+    display: none !important;
 }
+
+.error-border {
+    border: 2px solid #ff0000;
+    border-radius: 4px;
+}
+
 
 
 
